--- a/lib/myfoo/CMakeLists.txt
+++ b/lib/myfoo/CMakeLists.txt
@@ -1,3 +1,6 @@
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+
 file(GLOB_RECURSE SRC_FILES CONFIGURE_DEFENDS
     ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
 )
