--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,6 @@
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
 
 file(GLOB_RECURSE SRC_FILES CONFIGURE_DEFENDS
     ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
@@ -6,4 +8,4 @@ file(GLOB_RECURSE SRC_FILES CONFIGURE_DEFENDS
 
 add_executable(app ${SRC_FILES})
 target_link_libraries(app PUBLIC myfoo)
-target_link_libraries(app PUBLIC absl::strings)
+# target_link_libraries(app PUBLIC absl::strings)
